kubernetes/apps/infra/omni/base/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: omni
  namespace: omni
spec:
  parentRefs:
  - name: kong
    namespace: kong
  hostnames:
  - "omni.smadja.dev"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: omni
      port: 443
